k8sphp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8sphp-deployment
  namespace: default
  labels:
    app: k8sphp
    owner: Vlad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8sphp
  template:
    metadata:
      labels:
        app: k8sphp
    spec:
      containers:
      - name: k8sphp-container
        image: vladreamer/k8sphp:v6
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: k8sphp-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: k8sphp
  ports:
    - protocol: TCP
      port: 3030
      targetPort: 80
