tomcat-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat-v9-0-74
        image: vladreamer/tomcat7-0-94:ver2
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: tomcat
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30100
